refactor: use `cola.BizException` instead

--- a/cola-samples/charge/pom.xml
+++ b/cola-samples/charge/pom.xml
@@ -19,6 +19,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
+        <cola.components.version>4.3.0-SNAPSHOT</cola.components.version>
         <spring.boot.version>2.7.3</spring.boot.version>
         <springfox.version>3.0.0</springfox.version>
 
@@ -40,6 +41,13 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.alibaba.cola</groupId>
+                <artifactId>cola-components-bom</artifactId>
+                <version>${cola.components.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
